[wip] Add batched prefill-decode example and use FP16 model